[package]
name = "aoc2022"
version = "0.0.1"
edition = "2021"

[dependencies]
argh = "0.1"
colored = "2"
regex = "1"

[dev-dependencies]
criterion = "0.3"

# The "debug" profile
[profile.release]
panic = "abort"
debug = true
lto = "thin"

# The profile to benchmark with (`cargo run --profile benchmark`)
[profile.benchmark]
inherits = "release"
debug = false
lto = "fat"

[profile.bench]
inherits = "release"
debug = false
lto = "fat"

[[bench]]
name = "bench"
harness = false
